<resources>
    <string name="app_name">Find Anime</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_see">See other</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="all_images">All images</string>

    <string name="image_preview_from_gallery">image preview from gallery</string>
    <string name="open_on_my_anime_list">Open on My Anime List</string>
    <string name="delete">Delete</string>
    <string name="bookmark">Bookmark</string>
    <string name="other_results">Other results</string>
    <string name="filter_by_bookmark">Filter by bookmark</string>
    <string name="share">Share</string>
    <string name="send_to">Send to</string>
    <string name="image_from_search_result">image from search result</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Find Anime</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="url">Url</string>
    
    <string name="similarity">Similarity %1$s</string>
    <string name="episode_part">Episode: %1$s</string>
    <string name="time_part"> %1$02d:%2$02d:%3$02d</string>
    <string name="episode_and_time">%1$s %2$s</string>

    <!--  errors  -->
    <string name="error_save_image">can not take image from gallery</string>
    <string name="error_save_video">can not save video to file</string>
    <string name="error_response_body_empty">response from API is unsuccessful, response body is empty</string>
    <string name="error_no_response_results">response from API is unsuccessful, no search results obtaines</string>
    <string name="error_unspecified_error">something went wrong</string>
    <string name="error_legal_age">all results are 18+</string>
    <string name="error_save_to_public_storage">can not save video to public storage</string>
    <string name="error_loading_thumbnail">can not load video thumbnail</string>

    <!--  app_bar_main  -->
    <string name="main_fab_description">show other action bars</string>
    <string name="image_fab_description">create new search request with image</string>
    <string name="url_fab_description">create new search request with url</string>
    <string name="url_button_description">button for copy data from clipboard or delete input</string>
    <string name="cut_black_borders">Cut black borders</string>
    <string name="show_h_content">Show H content \n(By enabling this option you confirm that you are legal age)</string>
    <string name="mute_video">Mute video</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="video_preview_size">Video preview size</string>
    <string name="permission_used">Application uses:\n\n
        WRITE_EXTERNAL_STORAGE permission for obtaining images from phone gallery,
        and temporarily saving video in gallery before sharing
        \n\nINTERNET permission for sending and obtaining data from server</string>
    <string name="application_policy">Application policy</string>
    <string name="app_description">Application for finding anime titles and downloading preview by image</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="check_trace_moe_quota">Check trace.moe Quota</string>
    <string name="logo_of_the_application">logo of the application</string>
    <string name="thumbnail_of_the_video">thumbnail of the video</string>

</resources>