<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_see"
        android:orderInCategory="200"
        android:title="@string/other_results"
        android:icon="@drawable/ic_baseline_eye_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bookmarks"
        android:orderInCategory="300"
        android:title="@string/bookmark"
        android:icon="@drawable/ic_baseline_bookmark_border_24"
        app:showAsAction="always" />
</menu>