<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/dialogSearchOptionsCutBlackBorders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layoutDirection="rtl"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/cut_black_borders"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogMutedCheckBox" />

    <CheckBox
        android:id="@+id/dialogSearchOptionsHContentCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layoutDirection="rtl"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/show_h_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogSearchOptionsCutBlackBorders" />

    <CheckBox
        android:id="@+id/dialogMutedCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layoutDirection="rtl"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/mute_video"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogSearchOptionsRadioGroup" />

    <RadioGroup
        android:id="@+id/dialogSearchOptionsRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/dialogSearchOptionsRadioButtonSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/small"
            android:textAlignment="center"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/dialogSearchOptionsRadioButtonMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium"
            android:textAlignment="center"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/dialogSearchOptionsRadioButtonLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/large"
            android:textAlignment="center"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_preview_size"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>